# IACSRAG_rev1

./: .gitignore  2_유즈케이스_명세서.md  4_프로젝트_상세_설계서_v2.md  README.md  docker-compose.yml  main.py  pyproject.toml
.MemoryBank/: progressandTODO.md  projectbrief.md  techContext.md
.clineignore/tests/: test_core_logging.py  test_infrastructure_kafka.py  test_infrastructure_qdrant.py  test_ingest_application_document_service.py  test_ingest_domain_entities.py  test_ingest_use_cases_parse_email.py  test_ingest_use_cases_upload_file.py  test_process_domain_entities.py  test_utils_id_generator.py
.clinerules/workflows/: workflow.md
scripts/: init-mongo.js
src/api/: __init__.py
src/api/v1/: monitor.py  schemas.py  search.py
src/core/: config.py  dependencies.py  exceptions.py  logging.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  mongodb.py
src/infrastructure/embeddings/: __init__.py  openai_embedding_service.py
src/infrastructure/messaging/: __init__.py  kafka_client.py
src/infrastructure/vectordb/: __init__.py  qdrant_client.py
src/modules/ingest/application/: __init__.py
src/modules/ingest/domain/: entities.py
src/modules/monitor/: __init__.py
src/modules/monitor/application/: __init__.py
src/modules/monitor/domain/: __init__.py  entities.py
src/modules/monitor/infrastructure/: __init__.py
src/modules/monitor/interfaces/: __init__.py
src/modules/process/: __init__.py
src/modules/process/application/: __init__.py
src/modules/process/domain/: __init__.py  entities.py
src/modules/search/: __init__.py
src/modules/search/application/: __init__.py
src/modules/search/domain/: __init__.py  entities.py
src/modules/search/infrastructure/: __init__.py  vector_db.py
src/utils/: __init__.py  datetime.py  hash.py  id_generator.py  validators.py
test/integration/: test_main_app.py
test/reports/: api_module_test_report.md  code_coverage_analysis.md  core_module_test_report.md  final_test_summary.md  infrastructure_module_test_report.md  ingest_module_test_report.md  integration_test_report.md  process_module_test_report.md  search_module_test_report.md  usecase_test_analysis.md  utils_module_test_report.md
test/unit/: test_api_v1_monitor.py  test_api_v1_schemas.py  test_api_v1_search.py  test_core_config.py  test_core_config_enhanced.py  test_core_dependencies.py  test_core_dependencies_enhanced.py  test_core_exceptions.py  test_core_exceptions_enhanced.py  test_core_logging_enhanced.py  test_infrastructure_adapters.py  test_infrastructure_mongodb.py  test_infrastructure_openai_embedding.py  test_ingest_infrastructure_document_repository.py  test_ingest_use_cases_get_document_status.py  test_main.py  test_monitor_application_ports.py  test_monitor_application_services.py  test_monitor_domain_entities.py  test_monitor_infrastructure_adapters.py  test_monitor_infrastructure_repositories.py  test_monitor_infrastructure_repositories_mongodb.py  test_monitor_use_cases_collect_metrics.py  test_monitor_use_cases_manage_alerts.py  test_process_use_cases_create_chunks.py  test_process_use_cases_create_processing_job.py  test_process_use_cases_deduplicate_chunks.py  test_process_use_cases_extract_text.py  test_process_use_cases_generate_embeddings.py  test_search_infrastructure_vector_db.py  test_search_use_cases_generate_answer.py  test_search_use_cases_search_documents.py  test_utils_datetime.py  test_utils_hash.py  test_utils_validators.py
(+40 files in other folders)
